Finish major changes to README