@@ -1,26 +1,26 @@
 # Arma Server Manager
-
 Dedicated server administration made easy.
 
 ## About
 Arma Server Manager is a web administration tool for managing dedicated gaming servers mainly for games 
 by Bohemia Interactive, such as **Arma 3**, **DayZ** and **Arma Reforger**. If you're tired of paying expensive game hosting 
-providers and would prefer to host your own server, but find the server configuration tedious, then this project is for you.
+providers and would prefer to host your own server but find the server configuration tedious, then this project is for you.
 
 The manager allows you to **set up, control and monitor multiple game servers** with just a couple of clicks using a 
 simple user interface. You can easily **install workshop mods**, **upload scenarios**, **manage headless clients** and more. 
 For more comprehensive list of features, see [Features](#features). 
+
 
 ## List of contents
 - [About](#about)
 - [List of contents](#list-of-contents)
 - [Features](#features)
     - [Host multiple game servers](#host-multiple-game-servers-from-bohemia-interactive)
+    - [Server configuration](#server-configuration)
     - [Steam Workshop mods](#steam-workshop-mods)
     - [Community DLCs (cDLCs)](#community-dlcs-cdlcs)
     - [Launcher HTML mod presets](#launcher-html-mod-presets)
     - [System dashboard](#system-dashboard)
-    - [Server configuration](#server-configuration)
     - [Headless clients](#headless-clients)
     - [Scenarios](#scenarios)
     - [Additional game servers](#additional-game-servers)
@@ -52,15 +52,24 @@ For more comprehensive list of features, see [Features](#features).
 [More screenshots](https://imgur.com/a/74pWsoO)
 
 ### Host multiple game servers
-
 Manage multiple **Arma 3**, **DayZ***, **DayZ Experimental** and **Arma Reforger** servers. With SteamCMD running in 
 the background, server installation is fully automated and installing and updating the server takes just a single click.
 
 *\* Unfortunately, DayZ (stable) server is currently only available on Windows and is not available when using Docker 
 to run the manager because of this.*
 
+### Server configuration
+You can create multiple servers for each supported game.
+
+All of the following can be configured with a simple form:
+- Basic server information ([server.cfg](https://community.bistudio.com/wiki/Arma_3:_Server_Config_File))
+- Difficulty settings ([server.Arma3Profile](https://community.bistudio.com/wiki/Arma_3:_Server_Profile))
+- Advanced network settings ([basic.cfg](https://community.bistudio.com/wiki/Arma_3:_Basic_Server_Config_File))
+
 ### Steam Workshop mods
-The manager allows you to download and automatically install 
+The manager allows you to download and automatically install mods from Steam workshop. Just copy the ID of the mod
+into the form field and click "Install", everything will be done for you. Then, you can easily enable the downloaded
+mods for your existing server instances.
 
 ### Community DLCs (cDLCs)
 Besides workshop mods, you can also select which community DLCs you want to run any of your Arma 3 servers. 
@@ -73,14 +82,6 @@ the other way - create a preset in the manager, export it and share with your co
 ### System dashboard
 See basic info about the system resources, such as the current CPU, memory and disk usage.
 
-### Server configuration
-You can create multiple servers for each supported game.
-
-Depending on the game, all of the following can be configured with a simple form:
-- Basic server information ([server.cfg](https://community.bistudio.com/wiki/Arma_3:_Server_Config_File))
-- Difficulty settings ([server.Arma3Profile](https://community.bistudio.com/wiki/Arma_3:_Server_Profile))
-- Advanced network settings ([basic.cfg](https://community.bistudio.com/wiki/Arma_3:_Basic_Server_Config_File))
-
 ### Headless clients
 When running Arma 3 servers, you can launch or stop preconfigured headless clients with a single click.
 
@@ -92,6 +93,7 @@ Besides the main supported games, you can also use the manager for very basic co
 very useful in case you want to run other servers like Minecraft besides your primary Arma/DayZ servers. For setup,
 see [Additional servers](#additional-servers).
 
+
 ## Installation
 There are two ways to run the project.
 
@@ -101,7 +103,6 @@ There are two ways to run the project.
 - [Docker](https://docs.docker.com/engine/install/) installed
 
 #### Installation
-
 To run the manager, you can use the following files:
 
 `docker-compose.yml`
@@ -131,7 +132,7 @@ services:
     restart: always
     # 'host' network mode is not available on Windows. If you need to run this image on Windows, you need to set up port mappings manually.
     network_mode: host
-    # uncommend when running on Windows and add additional ports according to your needs 
+    # uncomment when running on Windows and add additional ports according to your needs 
     # ports:
     #   - "8080:8080"
     #   - "2302:2303/udp"
@@ -206,14 +207,12 @@ You can find the `.jar` file in releases section of this repository. Follow the 
 [JDK 17](https://www.oracle.com/java/technologies/downloads/#java17) + MySQL database
 
 #### Installing SteamCMD
-
 Follow [this guide](https://developer.valvesoftware.com/wiki/SteamCMD#Downloading_SteamCMD) to install SteamCMD on your
 server. After the installation is finished, set the full path to SteamCMD executable in `application.properties`. On
 Linux,
 the default path when installing with package manager is `/usr/games/steamcmd`.
 
 #### Configuring the Admin UI app
-
 There is a `config` directory bundled with the .jar executable file. In it, you will
 find `application.properties.EXAMPLE`
 file which contains sample configuration. Copy this file and name it `application.properties`.
@@ -221,7 +220,6 @@ file which contains sample configuration. Copy this file and name it `applicatio
 Open the new file and set all the required properties as described.
 
 #### Setting up MySQL database with Docker
-
 In the project you can find `docker-compose.yml` file for the MySQL database Docker container. Edit the environment
 variables to match `application.properties`, **especially the database properties**, comment out the `armaservermanager`
 service and then start the container with `docker-compose up -d`.
@@ -229,7 +227,6 @@ service and then start the container with `docker-compose up -d`.
 You can also use your own MySQL database server instead if you prefer do to so.
 
 #### Running the Admin UI app
-
 Launch the application by running: `java -jar arma3-server-gui.jar`. You should be able to access the GUI through
 `http://localhost:8080` by default.
 
@@ -237,14 +234,12 @@ Launch the application by running: `java -jar arma3-server-gui.jar`. You should 
 ## First time setup
 
 ### Getting SteamAuth token
-
 If you have Steam Guard 2FA enabled on your Steam account, you're going to need to get a SteamAuth token. To do this,
 either manually launch SteamCMD with a command line and log in, or use the semi-automated approach through UI.
 
 **NOTE:** Currently, there is no support for 2FA authentication with Steam mobile application.     
 
 #### Option 1: Obtain Steam Guard token through UI
-
 Upon first startup, head to "App config" tab and fill out your Steam username and password. Then, head to "Dashboard" and
 try to download any available server.
 
@@ -261,7 +256,6 @@ Then you'll be prompted to input Steam token which will be sent into your email.
 then type `quit` to exit the SteamCMD interface.
 
 ### Setting up SteamAuth
-
 In the GUI, navigate to "App config" tab. There, you need to enter your Steam account username, password and
 the token which you previously received through e-mail. This is needed to interact with SteamCMD to
 install/update the server and any workshop mods.
@@ -270,7 +264,6 @@ Note: The token has a limited lifetime. Sooner or later, some actions will start
 same time, you should get a fresh token to your email. After that, you just need to update the token in the manager.
 
 ### Installing server files
-
 After setting up the SteamAuth, navigate to "Dashboard" tab and just click the "Install/Update" button on the servers you want
 to install. The server will download its necessary files. This might take a few minutes or even a couple of hours depending on your network bandwidth, but eventually, the installation
 should finish.
@@ -282,24 +275,26 @@ After that, finish the configuration and press "Submit" to create the server.
 Now, you should already see the server appear in the servers list. Now you're pretty much done - try running the server!
 
 ### Additional servers
-
 If you need to manage other servers than the ones natively supported, you can use the Additional servers feature.
 This allows you to start and stop any gaming servers you have previously installed on the machine.
 
 Setup of an additional server requires you to access the database directly and import the settings manually.
 
-
-1. Install the server you wish to control with the app
-2. Create a shell script used to start the server executable with necessary parameters
+1. Install and configure the server you wish to control with the app.
+2. Create a shell script used to start the server executable with necessary parameters.
 3. Execute the following statement in the database (e.g. using PgAdmin which comes with the basic docker-compose file)
 
 ```sql
 INSERT INTO `additional_server` (`id`, `name`, `command`, `server_dir`, `image_url`)
-VALUES (0,
-        'Minecraft',
-        '/path/to/minecraft.sh',
-        '/path/to/minecraft/server/directory',
-        'https://optionalIconUrl.com/minecraft.png');
+VALUES (0, 'Minecraft', '/path/to/minecraft.sh', '/path/to/minecraft/server/directory', 'https://optionalIconUrl.com/minecraft.png');
+```
+
+The script might look like:
+`minecraft.sh`
+```shell
+#!/bin/bash
+cd /path/to/minecraft/server/directory
+java --add-opens java.desktop/java.awt=ALL-UNNAMED -Xms2G -Xmx8G -XX:+UseG1GC -jar server.jar nogui
 ```
 
 After the setup, you should be able to see the server listed in Additional servers tab, and start it with a click
@@ -313,10 +308,7 @@ Enjoy my work?
 
 [Donate with PayPal](https://paypal.me/fugasjunior)
 
-or [Buy me a coffee](https://www.buymeacoffee.com/fugasjunior)
-
 [!["Buy Me A Coffee"](https://www.buymeacoffee.com/assets/img/custom_images/orange_img.png)](https://www.buymeacoffee.com/fugasjunior)
-
 
 ## Credits
 This app was inspired by Dahlgren's [Arma Server Admin](https://github.com/Dahlgren/arma-server-web-admin) project. 
